[gd_scene load_steps=9 format=3 uid="uid://c8m01tw56ovff"]

[ext_resource type="Script" uid="uid://csqklni8jcf7x" path="res://hud/race_setup_menu.gd" id="1_h0jo7"]
[ext_resource type="Theme" uid="uid://dpa7dhnrd2tve" path="res://hud/themes/race_setup_theme.tres" id="2_1y5di"]
[ext_resource type="Texture2D" uid="uid://c0qt68x0egtvo" path="res://circle_mask.png" id="3_t4had"]
[ext_resource type="Theme" uid="uid://qhhw6a2nwlwb" path="res://hud/themes/checkbox.tres" id="4_3adh0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1y5di"]
bg_color = Color(0.2545, 0.195, 0.3, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t4had"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3adh0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1y5di"]

[node name="RaceSetupMenu" type="Control" node_paths=PackedStringArray("race_type_slider", "race_mode_label", "num_racers_slider", "num_racers_label", "combos_checkbox", "attacks_checkbox")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h0jo7")
race_type_slider = NodePath("PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer/RaceContainer/Sliders/RaceTypeSelector/RaceTypeSlider")
race_mode_label = NodePath("PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer/RaceContainer/Sliders/RaceTypeSelector/ModeLabel")
num_racers_slider = NodePath("PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer/RaceContainer/Sliders/NumRacersSelector/NumRacersSlider")
num_racers_label = NodePath("PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer/RaceContainer/Sliders/NumRacersSelector/NumRacersLabel")
combos_checkbox = NodePath("PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer/RaceContainer/Checkboxes/CombosContainer/CombosCheckbox")
attacks_checkbox = NodePath("PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer/RaceContainer/Checkboxes/AttacksContainer/AttacksCheckbox")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1y5di")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="GridContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="LeftPanel" type="PanelContainer" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_t4had")

[node name="CenterPanel" type="PanelContainer" parent="PanelContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_1y5di")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/GridContainer/CenterPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="CenterContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 72
text = "Race Setup"
horizontal_alignment = 1

[node name="RaceContainer" type="GridContainer" parent="PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="Sliders" type="GridContainer" parent="PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer/RaceContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="RaceTypeLabel" type="Label" parent="PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer/RaceContainer/Sliders"]
layout_mode = 2
text = "Race Type"
horizontal_alignment = 2

[node name="RaceTypeSelector" type="HBoxContainer" parent="PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer/RaceContainer/Sliders"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RaceTypeSlider" type="HSlider" parent="PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer/RaceContainer/Sliders/RaceTypeSelector"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_icons/grabber = ExtResource("3_t4had")
theme_override_icons/grabber_highlight = ExtResource("3_t4had")
theme_override_styles/slider = SubResource("StyleBoxEmpty_3adh0")
min_value = 1.0
max_value = 3.0
value = 1.0
tick_count = 3
ticks_on_borders = true

[node name="ModeLabel" type="Label" parent="PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer/RaceContainer/Sliders/RaceTypeSelector"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "1"
horizontal_alignment = 1

[node name="NumRacersLabel" type="Label" parent="PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer/RaceContainer/Sliders"]
layout_mode = 2
text = "Number of Racers"
horizontal_alignment = 2

[node name="NumRacersSelector" type="HBoxContainer" parent="PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer/RaceContainer/Sliders"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NumRacersSlider" type="HSlider" parent="PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer/RaceContainer/Sliders/NumRacersSelector"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 1.0
max_value = 12.0
value = 1.0

[node name="NumRacersLabel" type="Label" parent="PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer/RaceContainer/Sliders/NumRacersSelector"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="Checkboxes" type="GridContainer" parent="PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer/RaceContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 50
columns = 3

[node name="CombosContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer/RaceContainer/Checkboxes"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="CombosLabel" type="Label" parent="PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer/RaceContainer/Checkboxes/CombosContainer"]
layout_mode = 2
text = "Combos"
horizontal_alignment = 2

[node name="CombosCheckbox" type="CheckBox" parent="PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer/RaceContainer/Checkboxes/CombosContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("4_3adh0")

[node name="AttacksContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer/RaceContainer/Checkboxes"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="AttacksLabel" type="Label" parent="PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer/RaceContainer/Checkboxes/AttacksContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.27451)
text = "Attacks"
horizontal_alignment = 2

[node name="AttacksCheckbox" type="CheckBox" parent="PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer/RaceContainer/Checkboxes/AttacksContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("4_3adh0")
disabled = true

[node name="UnusedContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer/RaceContainer/Checkboxes"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="UnusedLabel" type="Label" parent="PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer/RaceContainer/Checkboxes/UnusedContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.27451)
text = "??????"
horizontal_alignment = 2

[node name="UnusedCheckbox" type="CheckBox" parent="PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer/RaceContainer/Checkboxes/UnusedContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("4_3adh0")
disabled = true

[node name="Buttons" type="VBoxContainer" parent="PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer/RaceContainer"]
layout_mode = 2

[node name="EditListButton" type="Button" parent="PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer/RaceContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
text = "  Edit List  "

[node name="StartRaceButton" type="Button" parent="PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer/RaceContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "  Start Race  "

[node name="MainMenuButton" type="Button" parent="PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "  Main Menu  "

[node name="RightPanel" type="PanelContainer" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_1y5di")

[connection signal="value_changed" from="PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer/RaceContainer/Sliders/RaceTypeSelector/RaceTypeSlider" to="." method="_on_race_type_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer/RaceContainer/Sliders/NumRacersSelector/NumRacersSlider" to="." method="_on_num_racers_slider_value_changed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer/RaceContainer/Buttons/EditListButton" to="." method="_on_edit_list_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer/RaceContainer/Buttons/StartRaceButton" to="." method="_on_start_race_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/GridContainer/CenterPanel/MarginContainer/CenterContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
